# stk

./: .gitignore  LICENSE  README.md  bun.config.ts  package.json  rspack.config.ts  tsconfig.json
crates/swc-plugin-jsx-control-statements/: Cargo.toml  README.md  package.json
crates/swc-plugin-jsx-control-statements-for-next/: Cargo.toml
crates/swc-plugin-jsx-control-statements/transform/: Cargo.toml
crates/swc-plugin-jsx-control-statements/transform/src/utils/: attributes.rs
crates/swc-plugin-jsx-control-statements/transform/tests/fixture/if-empty/: output.js
src/: index.ts
src/common/: DirTree.ts  IF.ts  Idle.ts  NodeTree.ts  id.ts  index.ts  uniqBy.ts
src/creep/: index.ts
src/creep/audio/: index.ts
src/creep/canvas/: index.ts
src/creep/document/: index.ts
src/creep/domrect/: index.ts
src/creep/errors/: index.ts
src/creep/features/: index.ts
src/creep/fonts/: index.ts
src/creep/headless/: index.ts
src/creep/intl/: index.ts
src/creep/lies/: index.ts
src/creep/math/: index.ts
src/creep/navigator/: index.ts
src/creep/resistance/: index.ts
src/creep/screen/: index.ts
src/creep/status/: index.ts
src/dnd/: index.ts  updateSort.ts
src/dom/: findParent.ts  index.ts
src/emittery/: index.ts  maps.ts  types.ts
src/graph/: index.ts
src/mobx/: index.ts  setStorageWhenChange.ts  transaction.ts  types.ts  useInstanceWatch.ts
src/react/: act.ts  createDeepCompareEffect.ts  index.ts  memo.ts  useContextSelector.tsx  useDeepUpdateEffect.ts  useDoubleClick.ts  useSelection.ts
src/storage/: index.ts  utils.ts
(+27 files in other folders)
