[workspace]
members  = ["./","./transform"]
resolver = "2"    

[workspace.dependencies]
easy-error = "1.0.0"
serde = "1"
swc_core = { version = "0.89.*", features = ["ecma_plugin_transform"] }
tracing = { version = "0.1.40", features = ["release_max_level_off"]}
testing = "0.35.21"

swc_common = "=0.33.15"

[package]
name = "swc_plugin_jsx_control_statements"
description = "SWC Plugin for jsx-control-statements"
edition = "2021"
license = "MIT"
publish = false
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[dependencies]
easy-error = { workspace = true }
serde = { workspace = true }
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }
tracing = {workspace = true, features = ["release_max_level_off"]}

swc_common = { workspace = true }

jsx_control_statements = { path = "./transform" }


